--- a/website.css
+++ b/website.css
@@ -90,7 +90,7 @@ li {
   border-radius: 5px;
   padding: 20px;
   padding-top: 27px;
-  height: 250px;
+  /* height: 250px; */
   width: 250px;
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -103,7 +103,7 @@ li {
   flex-wrap: wrap;
 }
 
-button {
+.fixbuttons > button {
   margin-top: 50px;
   font-size: 16px;
   padding: 15px;
@@ -114,7 +114,7 @@ button {
   transition-duration: 0.3s;
 }
 
-button:hover {
+.fixbuttons > button:hover {
   background-color: #146ece;
   color: white;
   border: none;
@@ -332,4 +332,81 @@ footer {
 .footercolumns > .fa-brands {
   width: 40px;
   font-size: 40px;
+}
+
+.lastsection {
+  display: flex;
+  background-color: white;
+  height: 490px;
+  justify-content: center;
+  width: 100%;
+}
+
+.lastsectionhalf1 {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  width: 40%;
+}
+
+.lastsectionhalf2 {
+  width: 40%;
+}
+
+.buttons > button {
+  width: 145px;
+  margin-right: 30px;
+  height: 45px;
+  padding: 5px;
+  margin-top: 70px;
+}
+
+.lastsectionhalf1 > h3 {
+  color: #091ca4;
+  margin-top: 75px;
+  font-size: 40px;
+}
+
+.lastsectionhalf1 > p {
+  line-height: 30px;
+  padding-top: 55px;
+}
+
+.navbar {
+  padding: 25px 0px !important;
+  box-shadow: none;
+}
+
+.nav-item {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+/* desktop view */
+
+@media (max-width: 1024px) {
+  .heropage {
+    max-height: 1000px;
+    padding-top: 80px;
+  }
+  .service {
+    margin-top: -220px;
+  }
+  .desc {
+    margin-bottom: 50px;
+  }
+  .first_heading {
+    font-size: 35px;
+  }
+  label > input {
+    width: 70vw;
+  }
+  .service1 {
+    width: 200px;
+    gap: 5px;
+  }
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 325px) {
 }
